# api/swagger/swagger.yaml
@@ -941,6 +941,92 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /v1/get_refresh_token/:
+    x-swagger-router-controller: general
+    x-hide: true
+    get:
+      description: Auth0 get
+      operationId: getRefreshToken
+      parameters:
+      - name: token
+        in: body
+        description: The pet JSON you want to post
+        schema:
+          type: string
+        required: true
+      responses:
+        "200":
+          description: Success
+          examples:
+            application/json: { "cases": {
+                                  "2016-11-17": {
+                                    "can": {
+                                        "country": "Canada",
+                                        "autochthonous_cases_suspected": 0,
+                                        "autochthonous_cases_confirmed": 0,
+                                        "imported_cases": 374,
+                                        "incidence_rate": 0,
+                                        "deaths": 0,
+                                        "confirmed_congenital": 0,
+                                        "population_x_1k": 36286,
+                                        "congenital_suspected": 0,
+                                        "congenital_probable": 0,
+                                        "gbs_total": 0,
+                                        "gbs_confirmed": 0
+                                    }
+                                  }
+                                }
+                              }
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/casesResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /v1/refresh_token/{refresh_token}:
+    x-swagger-router-controller: general
+    x-hide: true
+    get:
+      description: Auth0 get
+      operationId: refreshToken
+      parameters:
+      - name: refresh_token
+        type: string
+        in: path
+        required: true
+      responses:
+        "200":
+          description: Success
+          examples:
+            application/json: { "cases": {
+                                  "2016-11-17": {
+                                    "can": {
+                                        "country": "Canada",
+                                        "autochthonous_cases_suspected": 0,
+                                        "autochthonous_cases_confirmed": 0,
+                                        "imported_cases": 374,
+                                        "incidence_rate": 0,
+                                        "deaths": 0,
+                                        "confirmed_congenital": 0,
+                                        "population_x_1k": 36286,
+                                        "congenital_suspected": 0,
+                                        "congenital_probable": 0,
+                                        "gbs_total": 0,
+                                        "gbs_confirmed": 0
+                                    }
+                                  }
+                                }
+                              }
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/casesResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /v1/schools/countries/{country_code}:
     # binds a127 app logic to a route
     x-swagger-router-controller: general
